--- a/MedTime/res/values/strings.xml
+++ b/MedTime/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="title_activity_log_in">LogIn</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="user">Username</string>
+    <string name="pass">Password</string>
+    <string name="login">Log In</string>
 
 </resources>
