--- a/MedTime/res/values/strings.xml
+++ b/MedTime/res/values/strings.xml
@@ -14,5 +14,16 @@
     <string name="title_activity_welcome">Welcome</string>
     <string name="title_activity_pacienti">Pacienti</string>
     <string name="title_activity_consultatii">Consultatii</string>
+    <string name="new_game">new game</string>
+    <string name="adaugacon">Adauga Consultatie</string>
+    <string name="mo">Monday</string>
+    <string name="tu">Tuesday</string>
+    <string name="we">Wednesday</string>
+    <string name="th">Thursday</string>
+    <string name="fr">Friday</string>
+    <string name="apointment_pacient">Pacients name</string>
+    <string name="start_time">Appointment starting time</string>
+    <string name="end_time">Appointment end time</string>
+    <string name="appointment_date">Appointment date</string>
 
 </resources>
